--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,15 +7,17 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/{id}(id = ${user.getId()})}" th:object="${user}">
-  <label for="name">Enter name</label>
-  <input type="text" th:field="*{name}" id="name">
-  <br/>
-  <label for="salary">Enter salary</label>
-  <input type="text" th:field="*{salary}" id="salary">
-  <br/>
-  <input type="submit" value="Update">
+<form th:method="POST" th:action="@{/admin/{id}(id = ${user.getId()})}" th:object="${user}">
+    <label for="name">Enter name</label>
+    <input type="text" th:field="*{name}" id="name">
+    <br/>
+    <label for="salary">Enter salary</label>
+    <input type="text" th:field="*{salary}" id="salary">
+    <br/>
+    <input type="submit" value="Update">
 </form>
+
+<a href="/logout">LOGOUT</a>
 
 </body>
 </html>
