--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,13 +9,17 @@
 
 <div th:each="user : ${users}" >
 
-    <a th:href="@{/{id}(id=${user.getId})}" th:text="${user.getName()}">user</a>
+    <a th:href="@{{id}(id=${user.getId})}" th:text="${user.getName()}">user</a>
+
 </div>
 
 <br/>
 <hr/>
 
-<a href="/new">Create new user</a>
+<a href="/admin/new">Create new user</a>
+<br/>
+
+<a href="/logout">LOGOUT</a>
 
 
 </body>
