--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/}" th:object="${user}">
+<form th:method="POST" th:action="@{/admin/}" th:object="${user}">
     <label for="name">Enter name</label>
     <input type="text" th:field="*{name}" id="name">
     <br/>
@@ -16,6 +16,10 @@
     <br/>
     <input type="submit" value="Create">
 </form>
+
+
+<a href="/logout">LOGOUT</a>
+
 
 </body>
 </html>
