--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>User</title>
+    <title>Show user by ID</title>
 </head>
 <body>
+<p th:text="${user.getId()}">VALUE</p>
+<p th:text="${user.getName()}">VALUE</p>
+<p th:text="${user.getSalary()}">VALUE</p>
 
-<p th:text="${user.getName()}">Value</p>
-<p th:text="${user.getSalary()}">Value</p>
+<a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Edit</a>
 
-<a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a>
-
-<form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}">
+<form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete"/>
 </form>
+</form>
+
+<a href="/logout">LOGOUT</a>
 
 </body>
 </html>
