--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,17 +7,25 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/admin/{id}(id = ${user.getId()})}" th:object="${user}">
-    <label for="name">Enter name</label>
-    <input type="text" th:field="*{name}" id="name">
+<form th:method="PUT" th:action="@{/admin/{id}(id = ${user.getId()})}" th:object="${user}">
+    <label for="firstName">Enter first name</label>
+    <input type="text" th:field="*{firstName}" id="firstName">
+    <div style="color: darkred" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
     <br/>
-    <label for="salary">Enter salary</label>
-    <input type="text" th:field="*{salary}" id="salary">
+    <label for="lastname">Enter last name</label>
+    <input type="text" th:field="*{lastname}" id="lastName">
+    <div style="color: darkred" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></div>
+    <br/>
+    <label for="age">Enter age</label>
+    <input type="text" th:field="*{age}" id="age">
+    <div style="color: darkred" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></div>
+    <br/>
+    <label for="email">Enter email</label>
+    <input type="text" th:field="*{email}" id="email">
+    <div style="color: darkred" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
     <br/>
     <input type="submit" value="Update">
 </form>
-
-<a href="/logout">LOGOUT</a>
 
 </body>
 </html>
