--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
 <div th:each="user : ${users}" >
 
-    <a th:href="@{{id}(id=${user.getId})}" th:text="${user.getName()}">user</a>
+    <a th:href="@{/admin/{id}(id=${user.getId})}" th:text="${user.getFirstName()}">user</a>
 
 </div>
 
