--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -5,9 +5,10 @@
     <title>Show user by ID</title>
 </head>
 <body>
-<p th:text="${user.getId()}">VALUE</p>
-<p th:text="${user.getName()}">VALUE</p>
-<p th:text="${user.getSalary()}">VALUE</p>
+<p th:text="${user.getFirstName()}">Value</p>
+<p th:text="${user.getLastname()}">Value</p>
+<p Age th:text="${user.getAge()}">Value</p>
+<p th:text="${user.getEmail()}">Value</p>
 
 <a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Edit</a>
 
