--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,26 +1,37 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
-    <title>AllUsers</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+          crossorigin="anonymous">
+
+
+    <link rel="icon" href="https://img.freepik.com/free-icon/leaf_318-654663.jpg">
+
+    <title>Index</title>
+
 </head>
+
 <body>
+<h1>Welcome to Index PAGE!</h1>
+<a href="/login">Войти в систему</a>
 
-<div th:each="user : ${users}" >
-
-    <a th:href="@{/admin/{id}(id=${user.getId})}" th:text="${user.getFirstName()}">user</a>
 
 </div>
 
-<br/>
-<hr/>
-
-<a href="/admin/new">Create new user</a>
-<br/>
-
-<a href="/logout">LOGOUT</a>
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
+
+
+
