--- a/src/main/resources/templates/admin-page.html
+++ b/src/main/resources/templates/admin-page.html
@@ -147,7 +147,7 @@
                                                     <div class="d-flex justify-content-center align-items-center container">
                                                         <div class="row">
                                                             <form th:method="PATCH"
-                                                                  th:action="@{/admin/update/{id} (id=${user.getId()})}"
+                                                                  th:action="@{/admin/{id} (id=${user.getId()})}"
                                                                   th:object="${user}">
 
                                                                 <div class="mb-3">
@@ -250,7 +250,7 @@
                                                     <div class="d-flex justify-content-center align-items-center container">
                                                         <div class="row">
                                                             <form th:method="DELETE"
-                                                                  th:action="@{/admin/delete/{id}(id=${user.id})}"
+                                                                  th:action="@{/admin/{id}(id=${user.id})}"
                                                                   th:object="${user}">
 
                                                                 <div class="mb-3">
@@ -346,7 +346,7 @@
                             <p>Add new user</p>
 
                             <div class="d-flex justify-content-center align-items-center container">
-                                <form th:method="POST" th:action="@{/admin/create}" th:object="${user}">
+                                <form th:method="POST" th:action="@{/admin}" th:object="${user}">
                                     <div>
                                         <label for="username"
                                                class="form-label fw-bold">First Name</label>
