--- a/src/main/resources/templates/admin-page.html
+++ b/src/main/resources/templates/admin-page.html
@@ -210,7 +210,7 @@
                                                                             th:name="roles"
                                                                             th:value="*{roles}">
                                                                         <option th:each="role : ${AllRoles}"
-                                                                                th:value="${role.getId()}"
+                                                                                th:value="${role.getRole()}"
                                                                                 th:switch="${role.getRole()}"
                                                                                 th:selected="${user.roles.contains(role)}">
                                                                             <span th:case="'ROLE_ADMIN'">ADMIN</span>
@@ -386,7 +386,7 @@
                                             aria-label="Default select example"
                                             th:field="*{roles}" required>
                                         <option th:each="role : ${AllRoles}"
-                                                th:value="${role.getId()}"
+                                                th:value="${role.getRole()}"
                                                 th:switch="${role.getRole()}">
                                             <span th:case="'ROLE_ADMIN'">ADMIN</span>
                                             <span th:case="'ROLE_USER'">USER</span>
